# rpw2040

./: Cargo.toml  flake.nix  readme.md
.cargo/: config.toml
src/: main.rs
