[package]
name = "rpw2040"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt-rtt = "0.4.0"
defmt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-embedded-hal = { version = "0.2.0", features = ["defmt"] }
embassy-executor = { version = "0.6.3",  features = ["defmt", "integrated-timers", "arch-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-time = { version = "0.3.2", features = ["defmt"] }
embassy-rp = { version = "0.2.0", features = ["rt",  "defmt", "time-driver", "critical-section-impl"] }
critical-section = "1.1"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
# critical-section = "1.1"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
