[package]
name = "rpw2040"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt-rtt = "0.4.0"
defmt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-embedded-hal = { version = "0.3.0", features = ["defmt"] }
embassy-executor = { version = "0.7.0",  features = ["task-arena-size-98304", "defmt", "arch-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-time = { version = "0.4.0", features = ["defmt"] }
embassy-rp = { version = "0.3.0", features = ["defmt", "unstable-pac","time-driver", "critical-section-impl", "rp2040"] }
critical-section = "1.1"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"

cyw43 = { version = "0.3.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.3.0", features = ["defmt"] }

static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
